// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wikiLinks compile "HTML: WITH_XVAULT_LINK_TO_OTHER_VAULT" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a href=\\"foo-2\\">Foo</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_XVAULT_LINK_TO_OTHER_VAULT" 1`] = `
VFile {
  "contents": "# Root

[[dendron://vault2/foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_XVAULT_LINK_TO_OTHER_VAULT" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks parse cross vault wikilink with spaces 1`] = `
Object {
  "data": Object {
    "alias": "foo",
    "anchorHeader": undefined,
    "sameFile": false,
    "vaultName": "vault1",
  },
  "position": Position {
    "end": Object {
      "column": 31,
      "line": 1,
      "offset": 30,
    },
    "indent": Array [],
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "wikiLink",
  "value": "foo",
}
`;

exports[`wikiLinks parse fail: bad format 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "[",
        },
        Object {
          "data": Object {
            "alias": undefined,
            "anchorHeader": undefined,
            "sameFile": false,
            "vaultName": undefined,
          },
          "position": Position {
            "end": Object {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "indent": Array [],
            "start": Object {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "type": "wikiLink",
          "value": "foo bar",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "indent": Array [],
            "start": Object {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "type": "text",
          "value": "]",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
